<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:gravity="center">
    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>


    <EditText

        android:id="@+id/first_player_edit_text"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_rounded_variants"
        android:hint="@string/player_one_name"
        android:inputType="text"
        android:autofillHints="text" />
    <EditText

        android:id="@+id/second_player_edit_text"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@drawable/shape_rounded_variants"
        android:hint="@string/player_two_name"
        android:inputType="text"
        android:autofillHints="text" />

    <Switch
        android:layout_marginTop="30dp"
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textSize="20sp"
        android:text="@string/switch_text"
        android:textColor="@color/black"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_rounded_variants"
        android:layout_marginTop="70dp"
        android:text="@string/start"
        android:textSize="30sp"
        android:textColor="@color/black"/>




</LinearLayout>